# web-geo-viewer

./: Cargo.toml  LICENSE.txt  README.md  build.sh  listen.sh
docs/: README.md
src/: input_controller.rs  lib.rs  main.rs  mesh_list.rs  mesh_loader.rs  render_buffers.rs  render_canvas.rs  textured_mesh_renderer.rs  untextured_mesh_renderer.rs
src/io/: README.md  mod.rs  mtl.rs  obj.rs  off.rs  utils.rs
src/io/ply/: load.rs  save.rs  types.rs  utils.rs
src/shaders/: shaded.frag  textured.frag  textured.vert
src/tests/: io.rs
src/tests/data/: capsule-ascii.ply  capsule.mtl  capsule.ply
static/: index.html
