[package]
name = "web_geo_viewer"
version = "0.1.0"
authors = ["John Stalbaum <indianajohn@github>"]
edition = "2018"

[dependencies]
js-sys = "0.3"
yew = "0.16.2"
wasm-bindgen = "0.2"
three-d = "0.2.0"
console_log = "0.2.0"
log = "0.4.0"
rust-3d = "0.33.0"

[dependencies.image]
version = "0.23.6"
default-features = false
features = [
  "gif", 
  "jpeg", 
  "ico", 
  "png", 
  "pnm", 
  "tga", 
  "tiff", 
  "webp", 
  "bmp", 
  "hdr", 
  "dxt", 
  "dds", 
  "farbfeld",
]


[dependencies.web-sys]
version = "0.3"
features = [
  'Screen',
  'Window',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
